--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,24 @@
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  font-size: 1.2rem;
 }
-h5{
+h4{
+  margin-top: 15px;
   height: 50px;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
-}
-.search-field:hover {
-  outline: none;
-  border: none;
-}
-.search-box {
-  border: 1px solid #8dafb8;
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  background-color: #8dafb8;
-  color: #ffffff;
-  border-radius: 0 5px 5px 0;
-  margin-left: 25px;
+
+.input-feild{
+  width: 50%;
 }
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
-  gap: 20px;
+  gap: 15px;
   text-align: center;
   width: 100%;
   margin: auto;
-  margin-left: 20px;
+  margin-left: 15px;
   align-items: center;
   justify-content: center;
 }
@@ -53,16 +33,16 @@ h5{
   border: 1px solid #8dafb8;
 }
 .product-image {
-  width: 150px;
-  height: 150px;
+  width: 250px;
+  height: 250px;
 }
 .cart {
-  width: 350px;
-  /* border: 1px solid green; */
+  width: 300px;
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
-  margin-right: 30px;
+  margin-right: 20px;
+  margin-left: 10px;
   position: fixed;
 }
 .cart-main {
@@ -74,8 +54,7 @@ h5{
     grid-template-columns: repeat(1, 1fr);
   }
   .cart {
-    width: 300px;
-    /* border: 1px solid green; */
+    width: 250px;
     padding: 10px;
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
@@ -85,10 +64,22 @@ h5{
   .cart-main {
     padding-right: 10px;
   }
+  .input-feild{
+    width: 75%;
+  }
 }
 @media only screen and (max-width: 468px) {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    margin-left: 0;
+    column-gap: 0; 
+  }
+  .input-feild{
+    width: 90%;
+  }
+  .product-image {
+    width: 150px;
+    height: 150px;
   }
 }
